[package]
name = "secure_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1